--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.4",
+    "@types/papaparse": "^5.3.14",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
@@ -21,6 +22,7 @@
     "@googleapis/gmail": "^5.0.0",
     "express": "^4.18.2",
     "googleapis": "^122.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "papaparse": "^5.4.1"
   }
 }
